--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 #Enviroment files
 *.env
+venv
 !*example.env
 
 # PyCharm
@@ -14,3 +15,6 @@ volumes/
 # NGINX
 nginx/*
 !nginx/server.conf
+
+# notebooks
+**.ipynb
