--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.11'
 
+networks:
+  network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
+
 services:
   postgres:
     user: "0:0"
@@ -16,9 +23,10 @@ services:
     volumes:
       - ./volumes/db-data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - 5400:5432
     privileged: true
+    networks:
+      network:
+        ipv4_address: 172.18.0.2
 
   redis:
     container_name: redis_hack
@@ -37,6 +45,9 @@ services:
       - ./volumes/redis:/var/lib/redis/data
     ports:
       - 6379:6379
+    networks:
+      network:
+        ipv4_address: 172.18.0.3
 
   backend:
     container_name: backend_app
@@ -47,14 +58,18 @@ services:
     depends_on:
       - postgres
       - redis
+      - ml
     ports:
       - 8000:8000
     build:
       context: backend/src
       dockerfile: Dockerfile
+    networks:
+      network:
+        ipv4_address: 172.18.0.4
 
   ml:
-    container_name: ml
+    container_name: ml_app
     restart: unless-stopped
     build:
       context: ./ml
@@ -63,4 +78,7 @@ services:
       - 8080:8080
     volumes:
       - ./volumes/ml_data:/ml_data
+    networks:
+      network:
+        ipv4_address: 172.18.0.5
 
