--- a/ml/api/requirements.txt
+++ b/ml/api/requirements.txt
@@ -71,6 +71,7 @@ matplotlib==3.8.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 ml-dtypes==0.3.2
+mplcyberpunk==0.7.1
 mpmath==1.3.0
 murmurhash==1.0.10
 namex==0.0.8
