--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Используем базовый образ с Node.js
-FROM node:14
+FROM node:20 as build
 
 # Устанавливаем рабочую директорию в контейнере
 WORKDIR /app
@@ -15,3 +15,7 @@ COPY . .
 
 # Выполняем сборку приложения
 RUN npm run build
+
+FROM caddy:2-alpine as serve
+
+COPY --from=build /app/build /srv
